1999-11-04  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid.c (gnome_druid_init): patch from boc to give the
	next button the focus.

1999-11-04  Federico Mena Quintero  <federico@redhat.com>

	* gnome-app-helper.c: Patch from Eric Gillespie,
	Jr. (epg@pobox.com).  The About item should not have ellipsis.

1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_item_get_bounds): Fixed ordering of
	bounding vertices.  Now we *do* return the correct bounding box.

1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_init): Fixed long-standing problem
	with the canvas->pick_event not being properly initialized.  This
	caused spurious EnterNotify events to be sent to items right after
	the canvas was created and the mouse had never been inside it.

1999-11-02  Kjartan Maraas  <kmaraas@online.no>

	* gnome-druid-page-standard.c: #include <config.h>
	* gnome-druid-page-start.c: ditto.
	* gnome-druid-page-finish.c: ditto.
	* gnome-druid-page.c: ditto.
	* gnome-druid.c: ditto.
	* gnome-stock.c (gnome_pixmap_button): Marked label creation
	with _() to make buttons translatable.

1999-10-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (gnome_mdi_remove_view): if a registered object exists,
	destroy an empty GnomeApp even if it is the last one.

1999-10-22  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (libgnomeui10compatinclude_HEADERS): add this.

1999-10-21  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_set_pixels_per_unit): Clear the
	redraw area to avoid creating enormous microtile arrays when we
	zoom repeatedly.

1999-10-20  Elliot Lee  <sopwith@redhat.com>

	* gnome-init.c: Fix the memory leak AND avoid the bug from the first fix.

Mon Oct 18 21:51:43 1999  George Lebl  <jirka@5z.com>

	* gnome-app-util.c: use gnome_request_dialog directly instead
	  of using old deprecated functions

1999-10-18  Jonathan Blandford  <jrb@redhat.com>
